--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,6 +17,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXW3CJvy38aOrhbCrHQODbbFYrupvaLM8&v=3"></script>
 </head>
 
 <body>
@@ -29,6 +30,7 @@
     </div>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/BlazorGoogleMaps/objectManager.js"></script>
     <script>
         window.FireCarousel = () => {
 
@@ -43,7 +45,7 @@
                 () => $('#FarmShowCase').carousel('next'));
 
         }
- 
+
     </script>
 </body>
 
